--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "@riophae/vue-treeselect": "^0.4.0",
+    "awesome-phonenumber": "^2.65.0",
     "el-tree-select": "^3.1.14",
     "element-ui": "^2.13.2",
     "fs": "^0.0.1-security",
     "jimp": "^0.16.0",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nuxt": "^2.14.1",
