--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "slug": "^3.3.0",
     "vee-validate": "^3.3.7",
     "vue-i18n": "^8.17.5",
+    "vue-weather-widget": "^4.3.1",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
